# fst-backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.sh  run_dev.sh
backend/: Dockerfile  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
backend/fst_backend/: asgi.py  urls.py  wsgi.py
backend/fst_backend/accounts/: models.py  serializers.py
backend/fst_backend/accounts/migrations/: 0001_initial.py
backend/fst_backend/api/: admin.py  fields.py  utils.py  views.py
backend/fst_backend/api/migrations/: 0001_initial.py  0002_event_registration_until.py  0003_event_signature_alter_event_description.py  0004_alter_event_signature.py  0005_remove_event_organizer_event_organizer.py  0006_eventlocation.py  0007_alter_eventlocation_images.py
backend/fst_backend/api/models/: __init__.py  allergy.py  event.py  eventlocation.py  eventmedia.py  person.py  relationships.py  tag.py  titlemixin.py
backend/fst_backend/api/serializers/: __init__.py  allergy.py  event.py  eventlocation.py  eventmedia.py  member.py  person.py  tag.py
backend/fst_backend/api/tests/: partialdate_test.py  tests.py
backend/fst_backend/core/: apps.py
backend/fst_backend/core/management/commands/: wait_for_db.py
backend/fst_backend/playground/: playground.ipynb
backend/fst_backend/settings/: base.py  dev.py
db/: pgpass  servers.json
fst_backend/: settings.py  urls.py  wsgi.py
fst_backend/accounts/: apps.py  models.py
fst_backend/accounts/migrations/: 0001_initial.py  0002_remove_customuser_name.py  (+1 more)
fst_backend/api/: admin.py  apps.py  fields.py  models.py  serializers.py  tests.py  views.py
fst_backend/playground/: playground.ipynb
pgadmin/: Dockerfile  servers.json
traefik/: traefik.dev.yml
(+60 files in other folders)
