[tool.poetry]
name = "fst-backend"
version = "0.1.0"
description = "Backend for familienskatturnier.de"
authors = ["Robert Frießleben <robert.friessleben@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
drf-spectacular = "^0.26.4"
gunicorn = "^21.2.0"
Pillow = "^10.0.1"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
ipython = "^8.17.2"
django-environ = "^0.11.2"
debugpy = "^1.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.4"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "fst_backend.settings.dev"
