[tool.poetry]
authors = ["Robert Frießleben <robert.friessleben@gmail.com>"]
description = "Backend for familienskatturnier.de"
name = "backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[flake8]
max-line-length = 88
